# loadtester

./: .env.example  .gitignore  CORRECCION_MOCK_DATA.md  add_schema_column.py  analyze_job.py  check_schema.py  check_test_data.py  docker-compose.yml  final_instructions.md  fix_db_schema.py  last_job_id.txt  monitor_job.py  project_completion_summary.md  project_structure.md  pyproject.toml  setup.sh  test_full_flow.py  test_load.py
.claude/: settings.local.json
backend/: Dockerfile  INSTALL_AND_TEST.md  README.md  entrypoint.sh  pytest.ini  reprocess_job_results.py  requirements-test.txt  requirements.txt  run_tests.bat  run_tests.sh
backend/docs/: FASE2_SUMMARY.md  FASE3_CONTINUATION_PLAN.md
backend/loadtester/: __init__.py  init_files.py  main.py  settings.py
backend/loadtester/domain/: __init__.py
backend/loadtester/domain/entities/: domain_entities.py
backend/loadtester/domain/interfaces/: domain_interfaces.py  service_interfaces.py
backend/loadtester/domain/services/: load_test_service.py
backend/loadtester/infrastructure/config/: dependencies.py  dependency_container.py
backend/loadtester/infrastructure/database/: __init__.py  database_connection.py  database_models.py
backend/loadtester/infrastructure/repositories/: api_repository.py  endpoint_repository.py  job_repository.py  test_execution_repository.py  test_result_repository.py  test_scenario_repository.py
backend/loadtester/presentation/api/v1/: api_endpoints.py  api_router.py  openapi_endpoints.py  report_endpoints.py  status_endpoints.py
backend/loadtester/presentation/middleware/: middleware_files.py
backend/loadtester/shared/exceptions/: domain_exceptions.py  infrastructure_exceptions.py
backend/loadtester/shared/utils/: logger_utility.py
backend/loadtester_backup_20250926_203655/: all_init_files.py  main.py
backend/loadtester_backup_20250926_203655/domain/entities/: domain_entities.py
backend/loadtester_backup_20250926_203655/domain/interfaces/: __init__.py  domain_interfaces.py  service_interfaces.py
backend/loadtester_backup_20250926_203655/domain/services/: load_test_service.py
backend/loadtester_backup_20250926_203655/infrastructure/config/: dependencies.py  dependency_container.py
backend/loadtester_backup_20250926_203655/infrastructure/database/: database_connection.py  database_models.py
backend/loadtester_backup_20250926_203655/infrastructure/repositories/: api_repository.py  job_repository.py  test_execution_repository.py  test_result_repository.py  test_scenario_repository.py
backend/loadtester_backup_20250926_203655/presentation/api/v1/: api_endpoints.py  (+4 more)
backend/loadtester_backup_20250926_203655/presentation/middleware/: logging_middleware.py  middleware_files.py
backend/loadtester_backup_20250926_203655/shared/: __init__.py
backend/loadtester_backup_20250926_203655/shared/exceptions/: custom_exceptions.py  domain_exceptions.py  infrastructure_exceptions.py  remaining_repositories.py
backend/tests/: README.md  VALIDATION.md  __init__.py  conftest.py  test_infrastructure_validation.py
backend/tests/fixtures/: __init__.py  mock_data.py  openapi_specs.py
backend/tests/integration/: README.md  __init__.py  test_api_endpoints.py  test_database_integration.py  test_job_execution_flow.py  test_openapi_flow.py  test_report_generation_flow.py  test_scenario_flow.py
backend/tests/unit/: test_degradation_detection.py  test_k6_script_generator.py  test_mock_data_generator.py  test_openapi_parser.py  test_pdf_generator.py  test_repositories.py  test_scenario_generator.py
demo-test-api/: Dockerfile  README.md  main.py  test_endpoint.py
docs/: FASE3_COMPLETE_SUMMARY.md  LESSONS_LEARNED.md  TESTING_COMPLETE_REPORT.md  api_documentation.md  data_formats_documentation.md  deployment_documentation.md  testing_quick_reference.md  testing_strategy.md
frontend/: Dockerfile  app.py  config.toml  requirements.txt
frontend/components/: __init__.py  endpoint_selector_component.py  openapi_parser_component.py  results_viewer_component.py  streamlit_main_app.py  test_configurator_component.py
mocked-test-api/: Dockerfile  README.md  openapi.json  package.json  server.js
scripts/: sync-database.sh
