[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loadtester"
version = "0.0.1"
description = "LoadTester - Automated API Load Testing with OpenAPI Specification"
authors = [
    {name = "Salvador Galiano", email = "salvador@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["load-testing", "api", "openapi", "k6", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]

dependencies = [
    # Core Framework
    "fastapi[all]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "aiosqlite>=0.19.0",
    
    # Data Validation & Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client & File Handling
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    
    # OpenAPI & JSON Processing
    "openapi-spec-validator>=0.7.1",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    
    # AI Services Integration
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "openai>=1.3.0",
    
    # PDF Generation & Graphics
    "reportlab>=4.0.7",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "pillow>=10.1.0",
    
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.24.0",
    
    # Dependency Injection
    "dependency-injector>=4.41.0",
    
    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "faker>=20.1.0",
    "python-dateutil>=2.8.2",
    
    # Async & Background Tasks
    "celery>=5.3.4",
    "redis>=5.0.1",
    
    # Configuration & Environment
    "python-dotenv>=1.0.0",
    
    # Logging & Monitoring
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",  # For testing FastAPI
    
    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    
    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    
    # Development Tools
    "ipython>=8.17.2",
    "jupyter>=1.0.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.2",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]

[project.urls]
Homepage = "https://github.com/salvadorgaliano/loadtester"
Repository = "https://github.com/salvadorgaliano/loadtester"
Documentation = "https://loadtester.readthedocs.io"
"Bug Tracker" = "https://github.com/salvadorgaliano/loadtester/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = [
    "backend/app/tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend/app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]